# dance

./: .env  Cargo.toml  biome.json  dance-dance-revolution.code-workspace
backend/: Cargo.toml  Dockerfile  fly.toml
backend/.sqlx/: query-3aa9ce8657d06b654dd94601f431e4c488ca5f6ab9f36d55278d018cd60e52ce.json  query-55c085de8bf4d1389972f32bf0560f8a77215c96c16c2fbd4e0f0b000aae37fe.json  query-5b182ec71e8e0c3ca997607aaefab22c2ed230e104678cc4e43087664bc2be46.json  query-71c1bb707a90b1840d6efe0605344a8da4ed745ab1d6678ef6a43c06481a4911.json  query-8c58cd655f004b02b3f348562dec25fbb81d7e0f824d50ca5b9dc6d494fc5ccb.json  query-de07f46955c982415d24d393d01efcdc0c223c21a34439212123aa8234a43f7c.json
backend/migrations/: 20250525190414_initial-struct-setup.sql  20250609132801_add_company.sql  20250609132843_expand_domain_model.sql  20250618184825_add_user.sql  20250618185138_add_email_and_index_to_user.sql  20250621175311_unique_email.sql
backend/src/: main.rs
backend/src/application/: mod.rs  repositories.rs  services.rs
backend/src/application/mutations/auth/: login.rs  register.rs
backend/src/application/mutations/companies/: create_company.rs  mod.rs
backend/src/application/mutations/opportunities/: create_opportunity.rs  mod.rs
backend/src/application/queries/: mod.rs
backend/src/domain/: company.rs  mod.rs  opportunity.rs  user.rs
backend/src/infrastructure/: auth.rs  mod.rs  repositories.rs  services.rs
backend/src/interface/: error.rs  mod.rs  state.rs
backend/src/interface/routes/: auth.rs  companies.rs  mod.rs  opportunities.rs
frontend/: biome.json  (+2 more)
(+17 files in other folders)
