[package]
name = "dance-dance-revolution"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
url = { version = "2.5.0", features = ["serde"] }
log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1.0.98"
axum = "0.8.4"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
axum-login = "0.17.0"
derive_more = { version = "2.0.1", features = ["from", "into"] }
dotenvy = "0.15.7"
